tests/neg/enumWithType.scala
enum E[T] {
  case C[U](u: U) // error
}